syntax = "proto3";
package ftestats;

import "delphi.proto";
import "metrics_annotations.proto";

message FteCPSMetrics {
    // External
    option (delphi.datapath_metrics) = true;
    option (venice.metricInfo) = {
        DisplayName: "CPS Statistics",
        Description: "Key index - FTE ID",
        Scope: PerFTE,
        Tags: [ Level4 ]
    };
    fixed64        Key                        = 1;     // FTE ID

    delphi.Counter connections_per_second     = 2  [(venice.metricsField) = {DisplayName: "CPS" Description: "Connections per second" Units: Gauge } ];
    delphi.Counter max_connections_per_second = 3  [(venice.metricsField) = {DisplayName: "Max-CPS" Description: "Max Connections per second" Units: Gauge Tags:[ Level7 ] }];
    delphi.Counter packets_per_second         = 4  [(venice.metricsField) = {DisplayName: "PPS" Description: "Packets per second" Tags:[ Level7 ] }];
    delphi.Counter max_packets_per_second     = 5  [(venice.metricsField) = {DisplayName: "Max-PPS" Description: "Max packets per second" Tags:[ Level7 ] }];
}

message FteLifQMetrics { 
    // Internal
    option (delphi.datapath_metrics) = true;
    option (venice.metricInfo) = {
        DisplayName: "per-FTE Queue Statistics",
        Description: "Key index - FTE ID",
        Scope: PerFTE,
        Tags: [ Level7 ]
    };
    fixed64        Key                        = 1;     // FTE ID

    delphi.Counter flow_miss_packets          = 2  [(venice.metricsField) = {DisplayName: "Flow-miss Packets" Description: "Number of flow miss packets processed by this FTE"}];
    delphi.Counter flow_retransmit_packets    = 3  [(venice.metricsField) = {DisplayName: "Flow-retransmit Packets" Description: "Number of flow retransmits seen"}];
    delphi.Counter l4_redirect_packets        = 4  [(venice.metricsField) = {DisplayName: "L4-redirect Packets" Description: "Number of packets that hit the L4 redirect queue"}];
    delphi.Counter alg_control_flow_packets   = 5  [(venice.metricsField) = {DisplayName: "ALG-control-flow Packets" Description: "Number of packets that hit the ALG control flow queue"}];
    delphi.Counter tcp_close_packets          = 6  [(venice.metricsField) = {DisplayName: "TCP-Close Packets" Description: "Number of packets that hit the TCP close queue"}];
    delphi.Counter tls_proxy_packets          = 7  [(venice.metricsField) = {DisplayName: "TLS-proxy Packets" Description: "Number of packets that hit the TLS Proxy queue"}];
    delphi.Counter fte_span_packets           = 8  [(venice.metricsField) = {DisplayName: "FTE-Span Packets" Description: "Number of packets that hit the FTE SPAN queue"}];
    delphi.Counter software_queue_packets     = 9  [(venice.metricsField) = {DisplayName: "Software-config-Q Requests" Description: "Number of packets that hit the FTE config path"}];
    delphi.Counter queued_tx_packets          = 10 [(venice.metricsField) = {DisplayName: "Queued-Tx Packets" Description: "Number of packets enqueue in the FTE TX queue"}];
    delphi.Counter freed_tx_packets          = 11 [(venice.metricsField) = {DisplayName: "Freed-Tx Packets" Description: "Number of dropped or non-flowmiss packets for which the CPU resources are freed"}]; 
    delphi.Counter max_session_threshold_drops = 12 [(venice.metricsField) = {DisplayName: "Max Session Threshold Drops" Description: "Number of flowmiss packets dropped due to max session limit being hit"}];
    delphi.Counter session_creates_ignored     = 13 [(venice.metricsField) = {DisplayName: "Session creates ignored" Description: "Number of flow miss packets ignored for session creation"}];
}

message SessionSummaryMetrics {
    option (delphi.datapath_metrics) = true;
    option (venice.metricInfo) = {
        DisplayName: "Session Summary Statistics",
        Description: "Key index - FTE ID",
        Scope: PerFTE,
        Tags: [ Level4 ]
    };
    fixed64        Key                       = 1;
   
    delphi.Counter total_active_sessions         = 2  [(venice.metricsField) = {DisplayName: "Total Active Sessions" Description: "Total Number of active sessions"  Units: Gauge }];
    delphi.Counter num_l2_sessions               = 3  [(venice.metricsField) = {DisplayName: "L2 Sessions" Description: "Total Number of L2 Sessions"}];
    delphi.Counter num_tcp_sessions              = 4  [(venice.metricsField) = {DisplayName: "TCP Sessions" Description: "Total Number of TCP sessions"}];
    delphi.Counter num_udp_sessions              = 5  [(venice.metricsField) = {DisplayName: "UDP Sessions" Description: "Total Number of UDP sessions"}];
    delphi.Counter num_icmp_sessions             = 6  [(venice.metricsField) = {DisplayName: "ICMP Sessions" Description: "Total Number of ICMP sessions"}];
    delphi.Counter num_drop_sessions             = 7  [(venice.metricsField) = {DisplayName: "Drop Sessions" Description: "Total Number of Drop sessions"}];
    delphi.Counter num_aged_sessions             = 8  [(venice.metricsField) = {DisplayName: "Aged Sessions" Description: "Total Number of Aged sessions"}];
    delphi.Counter num_tcp_resets                = 9  [(venice.metricsField) = {DisplayName: "TCP RST Sent" Description: "Total Number of TCP Resets sent as a result of SFW Reject"}];
    delphi.Counter num_icmp_errors               = 10  [(venice.metricsField) = {DisplayName: "ICMP Error Sent" Description: "Total Number of ICMP Errors sent as a result of SFW Reject"}];
    delphi.Counter num_tcp_cxnsetup_timeouts     = 11  [(venice.metricsField) = {DisplayName: "Connection-timeout Sessions" Description: "Total Number of sessions that timed out at connection setup"}];
    delphi.Counter num_session_create_errors     = 12  [(venice.metricsField) = {DisplayName: "Session Create Errors" Description: "Total Number of sessions that errored out during creation"}];
    delphi.Counter num_tcp_half_open_sessions    = 13  [(venice.metricsField) = {DisplayName: "Half Open TCP Sessions" Description: "Total Number of Half Open TCP sessions"}];
    delphi.Counter num_other_active_sessions     = 14  [(venice.metricsField) = {DisplayName: "Other Active Sessions" Description: "Total Number of sessions other than TCP/UDP/ICMP"}];
    delphi.Counter num_tcp_session_limit_drops   = 15  [(venice.metricsField) = {DisplayName: "TCP Session limit exceed drops" Description: "Total Number of sessions dropped due to TCP session limit"}];
    delphi.Counter num_udp_session_limit_drops   = 16  [(venice.metricsField) = {DisplayName: "UDP Session limit exceed drops" Description: "Total Number of sessions dropped due to UDP session limit"}];
    delphi.Counter num_icmp_session_limit_drops  = 17  [(venice.metricsField) = {DisplayName: "ICMP Session limit exceed drops" Description: "Total Number of sessions dropped due to ICMP session limit"}];
    delphi.Counter num_other_session_limit_drops = 18  [(venice.metricsField) = {DisplayName: "Other Session limit exceed drops" Description: "Total Number of sessions other than TCP/UDP/ICMP dropped due to session limit"}];
}
